# homework

./: .flake8  pyproject.toml
data/: path.py
src/: generators.py  masks.py  processing.py  read_data.py  utils.py  widget.py
tests/: test.txt  test_generators.py  test_masks.py  test_processing.py  test_read_data.py  test_widget.py
